[package]
name = "paseto_maker"
authors = ["itsscb <dev@itsscb.de>"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/itsscb/paseto_maker"
description = "This library provides high-level functionality for creating, handling, and managing PASETO tokens."

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
rusty_paseto = { version = "0.7.2", features = [
    "batteries_included",
    "v4_public",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
